---------------------------------------------------------------------------------------------------
Version: 0.1.1
Date: 15. 07. 2022
  Changes:
    - Dependency on Space Exploration is now optional.
  Bugfixes:
    - Fix crash when opening GUI without entity. (Thanks LCStark!)
---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 14. 07. 2022
  Features:
    - Space Spidertron vehicle capable of flight and space travel.
    - Spidertron Dock for safe travel of spidertrons on spaceships